images, og info

--- a/en/index.html
+++ b/en/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Play the course, not the app</title>
-    <meta name="description" content="Simple golf scorekeeping that gets out of your way. No accounts, no tracking, just pure golf.">
+    <meta name="description" content="Play the course, not the app.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Play the course, not the app.">
+    <meta property="og:image" content="https://underpar.app/images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
