set image for all langs

--- a/cs/index.html
+++ b/cs/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Hrajte hřiště, ne aplikaci</title>
     <meta name="description" content="Jednoduché počítání skóre v golfu, které vám nepřekáží. Žádné účty, žádné sledování, jen čistý golf.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
