--- a/de/index.html
+++ b/de/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spiele den Platz, nicht die App</title>
     <meta name="description" content="Einfache Golf-Scorekeeping-App, die dir nicht im Weg steht. Keine Konten, kein Tracking, nur reines Golf.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
