--- a/en/index.html
+++ b/en/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Play the course, not the app.">
     <meta property="og:title" content="Under Par">
     <meta property="og:description" content="Play the course, not the app.">
-    <meta property="og:image" content="https://underpar.app/images/AppIcon.png">
+    <meta property="og:image" content="../images/AppIcon.png">
     <meta property="og:url" content="https://underpar.app">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
