--- a/es/index.html
+++ b/es/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Juega el campo, no la aplicación</title>
     <meta name="description" content="Conteo de puntuación de golf simple que no se interponga en tu camino. Sin cuentas, sin seguimiento, solo golf puro.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
