--- a/fr/index.html
+++ b/fr/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Jouez le parcours, pas l'application</title>
     <meta name="description" content="Comptage de score de golf simple qui ne vous gêne pas. Pas de comptes, pas de suivi, juste du golf pur.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
