--- a/ja/index.html
+++ b/ja/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - コースをプレイ、アプリではなく</title>
     <meta name="description" content="邪魔にならないシンプルなゴルフスコア記録。アカウント不要、追跡なし、純粋なゴルフのみ。">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
