--- a/nb/index.html
+++ b/nb/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spill banen, ikke appen</title>
     <meta name="description" content="Enkel golf-poengføring som ikke kommer i veien. Ingen kontoer, ingen sporing, bare ren golf.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
