--- a/sv/index.html
+++ b/sv/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spela banan, inte appen</title>
     <meta name="description" content="Enkel poängräkning för golf som inte är i vägen. Inga konton, ingen spårning, bara ren golf.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
