--- a/ko/index.html
+++ b/ko/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - 코스를 플레이하세요, 앱이 아니라</title>
     <meta name="description" content="방해하지 않는 간단한 골프 점수 기록. 계정 없음, 추적 없음, 순수한 골프만.">
+    <meta property="og:image" content="../images/AppIcon.png">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
