unify meta data tags. Include disc golf in top content

--- a/cs/index.html
+++ b/cs/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Hrajte hřiště, ne aplikaci</title>
-    <meta name="description" content="Jednoduché počítání skóre v golfu, které vám nepřekáží. Žádné účty, žádné sledování, jen čistý golf.">
+    <meta name="description" content="Hrajte hřiště, ne aplikaci.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Hrajte hřiště, ne aplikaci.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="cs_CZ">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Hrajte hřiště, ne aplikaci</h2>
-                    <p class="hero-description">Jednoduché počítání skóre v golfu, které vám nepřekáží. Žádné účty, žádné sledování, jen čistý golf. Soustřeďte se na svou hru, ne na telefon.</p>
+                    <p class="hero-description">Jednoduché počítání skóre v golfu a disc golfu, které vám nepřekáží. Žádné účty, žádné sledování. Soustřeďte se na svou hru, ne na telefon.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Stáhnout nyní</a>
                         <a href="#features" class="btn btn-secondary">Zjistit více</a>
