--- a/fi/index.html
+++ b/fi/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Pelaa kenttää, ei sovellusta</title>
-    <meta name="description" content="Yksinkertainen golfin pistelaskenta, joka ei häiritse peliäsi. Ei tilejä, ei seurantaa, vain puhdasta golfia.">
+    <meta name="description" content="Pelaa kenttää, ei sovellusta.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Pelaa kenttää, ei sovellusta.">
+    <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="fi_FI">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -15,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Pelaa kenttää, ei sovellusta</h2>
-                    <p class="hero-description">Yksinkertainen golfin pistelaskenta, joka ei häiritse peliäsi. Ei tilejä, ei seurantaa, vain puhdasta golfia. Keskity peliisi, ei puhelimeesi.</p>
+                    <p class="hero-description">Yksinkertainen golfin ja frisbeegolfin pistelaskenta, joka ei häiritse peliäsi. Ei tilejä, ei seurantaa. Keskity peliisi, ei puhelimeesi.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Lataa nyt</a>
                         <a href="#features" class="btn btn-secondary">Lisätietoja</a>
