--- a/fr/index.html
+++ b/fr/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Jouez le parcours, pas l'application</title>
-    <meta name="description" content="Comptage de score de golf simple qui ne vous gêne pas. Pas de comptes, pas de suivi, juste du golf pur.">
+    <meta name="description" content="Jouez le parcours, pas l'application.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Jouez le parcours, pas l'application.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="fr_FR">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Jouez le parcours, pas l'application</h2>
-                    <p class="hero-description">Comptage de score de golf simple qui ne vous gêne pas. Pas de comptes, pas de suivi, juste du golf pur. Concentrez-vous sur votre jeu, pas sur votre téléphone.</p>
+                    <p class="hero-description">Comptage de score de golf et disc golf simple qui ne vous gêne pas. Pas de comptes, pas de suivi. Concentrez-vous sur votre jeu, pas sur votre téléphone.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Télécharger maintenant</a>
                         <a href="#features" class="btn btn-secondary">En savoir plus</a>
