--- a/ja/index.html
+++ b/ja/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - コースをプレイ、アプリではなく</title>
-    <meta name="description" content="邪魔にならないシンプルなゴルフスコア記録。アカウント不要、追跡なし、純粋なゴルフのみ。">
+    <meta name="description" content="コースをプレイ、アプリではなく。">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="コースをプレイ、アプリではなく。">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">コースをプレイ、アプリではなく</h2>
-                    <p class="hero-description">邪魔にならないシンプルなゴルフスコア記録。アカウント不要、追跡なし、純粋なゴルフのみ。ゲームに集中し、携帯電話ではありません。</p>
+                    <p class="hero-description">邪魔にならないシンプルなゴルフとディスクゴルフのスコア記録。アカウント不要、追跡なし。ゲームに集中し、携帯電話ではありません。</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">今すぐダウンロード</a>
                         <a href="#features" class="btn btn-secondary">詳しく見る</a>
