--- a/ko/index.html
+++ b/ko/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - 코스를 플레이하세요, 앱이 아니라</title>
-    <meta name="description" content="방해하지 않는 간단한 골프 점수 기록. 계정 없음, 추적 없음, 순수한 골프만.">
+    <meta name="description" content="코스를 플레이하세요, 앱이 아니라.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="코스를 플레이하세요, 앱이 아니라.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">코스를 플레이하세요, 앱이 아니라</h2>
-                    <p class="hero-description">방해하지 않는 간단한 골프 점수 기록. 계정 없음, 추적 없음, 순수한 골프만. 게임에 집중하세요, 휴대폰이 아니라.</p>
+                    <p class="hero-description">방해하지 않는 간단한 골프 및 디스크 골프 점수 기록. 계정 없음, 추적 없음. 게임에 집중하세요, 휴대폰이 아니라.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">지금 다운로드</a>
                         <a href="#features" class="btn btn-secondary">더 알아보기</a>
