--- a/nb/index.html
+++ b/nb/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spill banen, ikke appen</title>
-    <meta name="description" content="Enkel golf-poengføring som ikke kommer i veien. Ingen kontoer, ingen sporing, bare ren golf.">
+    <meta name="description" content="Spill banen, ikke appen.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Spill banen, ikke appen.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="nb_NO">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spill banen, ikke appen</h2>
-                    <p class="hero-description">Enkel golf-poengføring som ikke kommer i veien. Ingen kontoer, ingen sporing, bare ren golf. Fokuser på spillet ditt, ikke på telefonen.</p>
+                    <p class="hero-description">Enkel golf- og discgolf-poengføring som ikke kommer i veien. Ingen kontoer, ingen sporing. Fokuser på spillet ditt, ikke på telefonen.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Last ned nå</a>
                         <a href="#features" class="btn btn-secondary">Les mer</a>
