--- a/de/index.html
+++ b/de/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spiele den Platz, nicht die App</title>
-    <meta name="description" content="Einfache Golf-Scorekeeping-App, die dir nicht im Weg steht. Keine Konten, kein Tracking, nur reines Golf.">
+    <meta name="description" content="Spiele den Platz, nicht die App.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Spiele den Platz, nicht die App.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="de_DE">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spiele den Platz, nicht die App</h2>
-                    <p class="hero-description">Einfache Golf-Scorekeeping-App, die dir nicht im Weg steht. Keine Konten, kein Tracking, nur reines Golf. Konzentriere dich auf dein Spiel, nicht auf dein Handy.</p>
+                    <p class="hero-description">Einfache Golf- und Disc-Golf-Scorekeeping, die dir nicht im Weg steht. Keine Konten, kein Tracking. Konzentriere dich auf dein Spiel, nicht auf dein Handy.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Jetzt herunterladen</a>
                         <a href="#features" class="btn btn-secondary">Mehr erfahren</a>
