--- a/es/index.html
+++ b/es/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Juega el campo, no la aplicación</title>
-    <meta name="description" content="Conteo de puntuación de golf simple que no se interponga en tu camino. Sin cuentas, sin seguimiento, solo golf puro.">
+    <meta name="description" content="Juega el campo, no la aplicación.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Juega el campo, no la aplicación.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="es_ES">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Juega el campo, no la aplicación</h2>
-                    <p class="hero-description">Conteo de puntuación de golf simple que no se interponga en tu camino. Sin cuentas, sin seguimiento, solo golf puro. Concéntrate en tu juego, no en tu teléfono.</p>
+                    <p class="hero-description">Conteo de puntuación de golf y disc golf simple que no se interpone en tu camino. Sin cuentas, sin seguimiento. Concéntrate en tu juego, no en tu teléfono.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Descargar ahora</a>
                         <a href="#features" class="btn btn-secondary">Saber más</a>
