--- a/sv/index.html
+++ b/sv/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Under Par - Spela banan, inte appen</title>
-    <meta name="description" content="Enkel poängräkning för golf som inte är i vägen. Inga konton, ingen spårning, bara ren golf.">
+    <meta name="description" content="Spela banan, inte appen.">
+    <meta property="og:title" content="Under Par">
+    <meta property="og:description" content="Spela banan, inte appen.">
     <meta property="og:image" content="../images/AppIcon.png">
+    <meta property="og:url" content="https://underpar.app">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="sv_SE">
+    <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
@@ -16,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spela banan, inte appen</h2>
-                    <p class="hero-description">Enkel poängräkning för golf som inte är i vägen. Inga konton, ingen spårning, bara ren golf. Fokusera på ditt spel, inte på din telefon.</p>
+                    <p class="hero-description">Enkel poängräkning för golf och discgolf som inte är i vägen. Inga konton, ingen spårning. Fokusera på ditt spel, inte på din telefon.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Ladda ner nu</a>
                         <a href="#features" class="btn btn-secondary">Läs mer</a>
