--- a/cs/index.html
+++ b/cs/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Hrajte hřiště, ne aplikaci</h2>
-                    <p class="hero-description">Jednoduché počítání skóre v golfu a disc golfu, které vám nepřekáží. Žádné účty, žádné sledování. Soustřeďte se na svou hru, ne na telefon.</p>
+                    <p class="hero-description">Jednoduché počítání skóre v golfu a disc golfu, které vám nepřekáží. Žádné účty, žádné reklamní trackery. Soustřeďte se na svou hru, ne na telefon.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Stáhnout nyní</a>
                         <a href="#features" class="btn btn-secondary">Zjistit více</a>
