--- a/de/index.html
+++ b/de/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spiele den Platz, nicht die App</h2>
-                    <p class="hero-description">Einfache Golf- und Disc-Golf-Scorekeeping, die dir nicht im Weg steht. Keine Konten, kein Tracking. Konzentriere dich auf dein Spiel, nicht auf dein Handy.</p>
+                    <p class="hero-description">Einfache Golf- und Disc-Golf-Scorekeeping, die dir nicht im Weg steht. Keine Konten, keine Werbe-Tracker. Konzentriere dich auf dein Spiel, nicht auf dein Handy.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Jetzt herunterladen</a>
                         <a href="#features" class="btn btn-secondary">Mehr erfahren</a>
