--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Play the course, not the app</h2>
-                    <p class="hero-description">Simple golf and disc golf scorekeeping that gets out of your way. No accounts, no tracking. Focus on your game, not your phone.</p>
+                    <p class="hero-description">Simple golf and disc golf scorekeeping that gets out of your way. No accounts, no ad trackers. Focus on your game, not your phone.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Download Now</a>
                         <a href="#features" class="btn btn-secondary">Learn More</a>
