--- a/fi/index.html
+++ b/fi/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Pelaa kenttää, ei sovellusta</h2>
-                    <p class="hero-description">Yksinkertainen golfin ja frisbeegolfin pistelaskenta, joka ei häiritse peliäsi. Ei tilejä, ei seurantaa. Keskity peliisi, ei puhelimeesi.</p>
+                    <p class="hero-description">Yksinkertainen golfin ja frisbeegolfin pistelaskenta, joka ei häiritse peliäsi. Ei tilejä, ei mainosseuranta. Keskity peliisi, ei puhelimeesi.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Lataa nyt</a>
                         <a href="#features" class="btn btn-secondary">Lisätietoja</a>
