--- a/fr/index.html
+++ b/fr/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Jouez le parcours, pas l'application</h2>
-                    <p class="hero-description">Comptage de score de golf et disc golf simple qui ne vous gêne pas. Pas de comptes, pas de suivi. Concentrez-vous sur votre jeu, pas sur votre téléphone.</p>
+                    <p class="hero-description">Comptage de score de golf et disc golf simple qui ne vous gêne pas. Pas de comptes, pas de traqueurs publicitaires. Concentrez-vous sur votre jeu, pas sur votre téléphone.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Télécharger maintenant</a>
                         <a href="#features" class="btn btn-secondary">En savoir plus</a>
