--- a/ja/index.html
+++ b/ja/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">コースをプレイ、アプリではなく</h2>
-                    <p class="hero-description">邪魔にならないシンプルなゴルフとディスクゴルフのスコア記録。アカウント不要、追跡なし。ゲームに集中し、携帯電話ではありません。</p>
+                    <p class="hero-description">邪魔にならないシンプルなゴルフとディスクゴルフのスコア記録。アカウント不要、広告トラッカーなし。ゲームに集中し、携帯電話ではありません。</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">今すぐダウンロード</a>
                         <a href="#features" class="btn btn-secondary">詳しく見る</a>
