--- a/ko/index.html
+++ b/ko/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">코스를 플레이하세요, 앱이 아니라</h2>
-                    <p class="hero-description">방해하지 않는 간단한 골프 및 디스크 골프 점수 기록. 계정 없음, 추적 없음. 게임에 집중하세요, 휴대폰이 아니라.</p>
+                    <p class="hero-description">방해하지 않는 간단한 골프 및 디스크 골프 점수 기록. 계정 없음, 광고 추적기 없음. 게임에 집중하세요, 휴대폰이 아니라.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">지금 다운로드</a>
                         <a href="#features" class="btn btn-secondary">더 알아보기</a>
