--- a/es/index.html
+++ b/es/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Juega el campo, no la aplicación</h2>
-                    <p class="hero-description">Conteo de puntuación de golf y disc golf simple que no se interpone en tu camino. Sin cuentas, sin seguimiento. Concéntrate en tu juego, no en tu teléfono.</p>
+                    <p class="hero-description">Conteo de puntuación de golf y disc golf simple que no se interpone en tu camino. Sin cuentas, sin rastreadores publicitarios. Concéntrate en tu juego, no en tu teléfono.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Descargar ahora</a>
                         <a href="#features" class="btn btn-secondary">Saber más</a>
