--- a/nb/index.html
+++ b/nb/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spill banen, ikke appen</h2>
-                    <p class="hero-description">Enkel golf- og discgolf-poengføring som ikke kommer i veien. Ingen kontoer, ingen sporing. Fokuser på spillet ditt, ikke på telefonen.</p>
+                    <p class="hero-description">Enkel golf- og discgolf-poengføring som ikke kommer i veien. Ingen kontoer, ingen annonse-trackere. Fokuser på spillet ditt, ikke på telefonen.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Last ned nå</a>
                         <a href="#features" class="btn btn-secondary">Les mer</a>
