--- a/sv/index.html
+++ b/sv/index.html
@@ -22,7 +22,7 @@
                 <div class="hero-text">
                     <h1 class="hero-title">Under Par</h1>
                     <h2 class="hero-tagline">Spela banan, inte appen</h2>
-                    <p class="hero-description">Enkel poängräkning för golf och discgolf som inte är i vägen. Inga konton, ingen spårning. Fokusera på ditt spel, inte på din telefon.</p>
+                    <p class="hero-description">Enkel poängräkning för golf och discgolf som inte är i vägen. Inga konton, inga annons-trackers. Fokusera på ditt spel, inte på din telefon.</p>
                     <div class="hero-buttons">
                         <a href="#download" class="btn btn-primary">Ladda ner nu</a>
                         <a href="#features" class="btn btn-secondary">Läs mer</a>
