--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Under Par">
+    <link rel="icon" type="image/png" href="images/AppIcon.png"/>
 
     <script>
         // Immediate language detection and redirect
