--- a/sv/index.html
+++ b/sv/index.html
@@ -13,6 +13,7 @@
     <meta property="og:locale" content="sv_SE">
     <meta property="og:site_name" content="Under Par">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/png" href="../images/AppIcon.png"/>
 </head>
 <body>
     <header class="hero">
