--- a/privacy-policy/et.html
+++ b/privacy-policy/et.html
@@ -6,9 +6,29 @@
     <title>Privaatsuspoliitika - Under Par</title>
     <meta name="description" content="Under Par privaatsuspoliitika - Lihtne golfi punktiarvestuse rakendus">
     <link rel="stylesheet" href="../styles.css">
+    <link rel="icon" type="image/png" href="../images/AppIcon.png"/>
 </head>
 <body>
     <header class="hero privacy-header">
+        <div class="language-dropdown">
+            <button class="language-toggle">
+                <span class="globe-icon">🌐</span>
+                <span class="current-lang">Eesti</span>
+                <span class="dropdown-arrow">▼</span>
+            </button>
+            <div class="language-menu">
+                <a href="../cs/" class="language-option">Čeština</a>
+                <a href="../de/" class="language-option">Deutsch</a>
+                <a href="../en/" class="language-option">English</a>
+                <a href="../es/" class="language-option">Español</a>
+                <a href="../fi/" class="language-option">Suomi</a>
+                <a href="../fr/" class="language-option">Français</a>
+                <a href="../ja/" class="language-option">日本語</a>
+                <a href="../ko/" class="language-option">한국어</a>
+                <a href="../nb/" class="language-option">Norsk</a>
+                <a href="../sv/" class="language-option">Svenska</a>
+            </div>
+        </div>
         <div class="hero-visual">⛳</div>
         <div class="container">
             <div class="hero-content">
