--- a/ja/index.html
+++ b/ja/index.html
@@ -25,6 +25,7 @@
             </button>
             <div class="language-menu">
                 <a href="../cs/" class="language-option">Čeština</a>
+                <a href="../da/" class="language-option">Dansk</a>
                 <a href="../de/" class="language-option">Deutsch</a>
                 <a href="../en/" class="language-option">English</a>
                 <a href="../es/" class="language-option">Español</a>
